--- a/src/AloneBundle/Resources/views/Contact/contact.html.twig
+++ b/src/AloneBundle/Resources/views/Contact/contact.html.twig
@@ -4,15 +4,18 @@
 Contact
 {% endblock %}
 
+{% block header %}
+    Contact
+{% endblock %}
+
+{% block smallHeader %}
+    how to contact us
+{% endblock %}
+
 {% block content %}
 
-    <div class="row text-center">
-        <h1 class="alheader">
-                Contact
-        </h1>
-    </div>
 
-        <div class="row text-center altext">
+        <div class="row text-center bloglink" style="font-size: 300%">
                 Want to Contact us? Dont be shy!
                 <p></p>
                 Give us Feedback, ask Details about GoHome
@@ -22,8 +25,8 @@ Contact
 
     <br>
     <div class="row text-center">
-        <a class="btn btn-alone" target="_blank" href="https://www.youtube.com/channel/UCwFT6RfDcC21jE-QhYxCt5g">Find us on YouTube!</a>
-        <a class="btn btn-alone" target="_blank" href="https://twitter.com/AloneDevelopers">Find us on Twitter!</a>
-        <a class="btn btn-alone" href="mailto:AloneDevs@gmx.de">Send us an Email!</a>
+        <a class="btn btn-innerMenu" target="_blank" href="https://www.youtube.com/channel/UCwFT6RfDcC21jE-QhYxCt5g">Find us on YouTube!</a>
+        <a class="btn btn-innerMenu" target="_blank" href="https://twitter.com/AloneDevelopers">Find us on Twitter!</a>
+        <a class="btn btn-innerMenu" href="mailto:AloneDevs@gmx.de">Send us an Email!</a>
     </div>
 {% endblock %}
