--- a/src/AloneBundle/Resources/views/GoHome/go_home_concept.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_concept.html.twig
@@ -15,5 +15,9 @@
 {% endblock %}
 
 {% block content %}
-
+    <div class="text-box altext text-center" style="height: 45%; left: 5%">
+        <div>
+            GoHome is great!
+        </div>
+    </div>
 {% endblock %}
