--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -30,7 +30,7 @@
 
                 <a href="{{ path('contact') }}" class="btn toolbar-links">Contact</a>
 
-                <a href="{{ path('friends') }}" class="btn toolbar-links" >Downloads</a>
+                <a href="{{ path('downloads') }}" class="btn toolbar-links" >Downloads</a>
             </div>
 </div>
     {% endblock %}
