--- a/src/AloneBundle/Resources/views/GoHome/go_home_start.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_start.html.twig
@@ -19,5 +19,6 @@ GoHome
         <a href="{{ path('gh_concept') }}" class="btn btn-innerMenu">Concept</a>
         <a href="{{ path('GoHome_About') }}" class="btn btn-innerMenu">About</a>
         <a href="{{ path('GoHome_Media') }}" class="btn btn-innerMenu">Gallery</a>
+        <a href="{{ path('GoHome_Media') }}" class="btn btn-innerMenu">FAQ</a>
     </div>
 {% endblock %}
