--- a/src/AloneBundle/Resources/views/Contact/contact.html.twig
+++ b/src/AloneBundle/Resources/views/Contact/contact.html.twig
@@ -15,18 +15,18 @@ Contact
 {% block content %}
 
 
-        <div class="row text-center bloglink" style="font-size: 300%">
+        <div class="text-center altext text-box" style="left: 5%">
                 Want to Contact us? Dont be shy!
                 <p></p>
                 Give us Feedback, ask Details about GoHome
                 <br>
                 or just write us what you have done today :)
-        </div>
 
-    <br>
-    <div class="row text-center">
-        <a class="btn btn-innerMenu" target="_blank" href="https://www.youtube.com/channel/UCwFT6RfDcC21jE-QhYxCt5g">Find us on YouTube!</a>
-        <a class="btn btn-innerMenu" target="_blank" href="https://twitter.com/AloneDevelopers">Find us on Twitter!</a>
-        <a class="btn btn-innerMenu" href="mailto:AloneDevs@gmx.de">Send us an Email!</a>
+    <div class="text-center" style="padding-top: 2%">
+        <a class="btn btn-innerMenu" target="_blank" href="https://www.youtube.com/channel/UCwFT6RfDcC21jE-QhYxCt5g" style="margin: 1%">Find us on YouTube!</a>
+        <a class="btn btn-innerMenu" target="_blank" href="https://twitter.com/AloneDevelopers" style="margin: 1%">Find us on Twitter!</a>
+        <a class="btn btn-innerMenu" href="mailto:AloneDevs@gmx.de" style="margin: 1%">Send us an Email!</a>
     </div>
+
+        </div>
 {% endblock %}
