--- a/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
@@ -4,20 +4,16 @@
 GoHome - About
 {% endblock %}
 
-{% block background %}
-    class="defaultBackground"
+{% block header %}
+    About GoHome
+{% endblock %}
+
+{% block smallHeader %}
+    What's your nightmare?
 {% endblock %}
 
 {% block content %}
-
-    <div class="row">
-        <h1 class="alheader">
-                About GoHome
-        </h1>
-    </div>
-
-    <div class="col-lg-12">
-        <div class="text-center altext">
+        <div class="text-center altext text-box" style="left: 5%">
             You will always remember the happy moments in life.
             <br>
             But what, when they turn into your worst nightmares?
@@ -36,5 +32,4 @@ GoHome - About
             <br>
             His past overtakes him...
         </div>
-    </div>
 {% endblock %}
