--- a/src/AloneBundle/Resources/views/sitebar.html.twig
+++ b/src/AloneBundle/Resources/views/sitebar.html.twig
@@ -1,8 +1,8 @@
 
 
 
-<button id="sitebar_back_button" class="btn btn-alone" onclick="window.history.back()">Back</button>
-<button style="left: 40%" id="sitebar_back_button" class="btn btn-alone" onclick="window.history.forward()">Forward</button>
+<button style="float: left; margin-left: 25%" class="btn btn-alone" onclick="window.history.back()">Back</button>
+<button style="float: left; margin-right: 25%" class="btn btn-alone" onclick="window.history.forward()">Forward</button>
 
 <script type="text/javascript">
     console.log("Test");
