--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -10,21 +10,40 @@ Home
 
 {% block content %}
     <div class="container">
-    <div class="row">
-        <h1 class="text-center row alheader">
-                {#AloneDevelopers#}
-        </h1>
-    </div>
-    </div>
-    {#<div class="container-fluid">#}
-    {#<div class="albig text-center row">#}
-            {#Hi how are you?#}
-            {#<p></p>#}
-            {#Please take a look around here, take your time!#}
-        {#<br>#}
-        {#<br>#}
-        {#<br>#}
-        {#<br>#}
-    </div>
+
+        <div id="myCarousel" class="carousel slide image-box" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="https://alonedevelopers.com/uploads/media/ee25dbb07e01d6e14d80bfb70baa2008.png" alt="Los Angeles">
+                </div>
+
+                <div class="item">
+                    <img src="https://alonedevelopers.com/uploads/media/708c0654ac7e3a524ff4b15a760687dc.png" alt="Chicago">
+                </div>
+
+                <div class="item">
+                    <img src="https://alonedevelopers.com/uploads/media/0351b874003673617ba5c66a6dd3118e.png" alt="New York">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
     </div>
 {% endblock %}
