--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -185,9 +185,7 @@
 }
 
 .backgroundImage {
-    background: url("/../images/GoHomeTeaser.png") no-repeat center;
-    background-size: 100vw 100vh;
-    background-position: 0 12vh;
+    background: url("/../images/GoHomeTeaser.jpeg");
 }
 
 .logo {
@@ -257,6 +255,22 @@
     box-shadow: #000000 0 0 0.6vmax;
     background: linear-gradient(rgba(99, 99, 99, 0.9), rgba(62, 62, 62, 0.8));
 }
+
+.image-box{
+    position: relative;
+    width: 80%;
+    height: 50%;
+    padding: 0.5%;
+    margin: 0.5%;
+    overflow: auto;
+    border-style: solid;
+    border-width: 4px;
+    border-color: rgb(44, 44, 44);
+    border-radius: 8px;
+    box-shadow: #000000 0 0 0.6vmax;
+    background: linear-gradient(rgba(99, 99, 99, 0.9), rgba(62, 62, 62, 0.8));
+}
+
 
 /*Medium devices*/
 @media only screen and (max-width: 1000px){
