--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -16,6 +16,12 @@
     color: #141414;
 }
 
+.infotext{
+    font-family: 'Indie Flower';
+    font-size: 2vmax;
+    color: #b14500;
+}
+
 .allink{
     font-family: 'Indie Flower';
     font-size: 1.2vmax;
