--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -11,35 +11,35 @@ Home
 {% block content %}
     <div class="container">
 
-        <div id="myCarousel" class="carousel slide image-box" data-ride="carousel">
+        <div id="slider" class="carousel slide image-box" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#slider" data-slide-to="0" class="active"></li>
+                <li data-target="#slider" data-slide-to="1"></li>
+                <li data-target="#slider" data-slide-to="1"></li>
             </ol>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="https://alonedevelopers.com/uploads/media/ee25dbb07e01d6e14d80bfb70baa2008.png" alt="Los Angeles">
+                    <img src="https://alonedevelopers.com/uploads/media/9daefa2b9084a2ff8bd6d0ab051bde27.png">
                 </div>
 
                 <div class="item">
-                    <img src="https://alonedevelopers.com/uploads/media/708c0654ac7e3a524ff4b15a760687dc.png" alt="Chicago">
+                    <img src="https://alonedevelopers.com/uploads/media/708c0654ac7e3a524ff4b15a760687dc.png">
                 </div>
 
                 <div class="item">
-                    <img src="https://alonedevelopers.com/uploads/media/0351b874003673617ba5c66a6dd3118e.png" alt="New York">
+                    <img src="https://alonedevelopers.com/uploads/media/29d6c087d1191417f7818d5d64075a68.png">
                 </div>
             </div>
 
             <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <a class="left carousel-control" href="#slider" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <a class="right carousel-control" href="#slider" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right"></span>
                 <span class="sr-only">Next</span>
             </a>
