--- a/src/AloneBundle/Resources/views/GoHome/go_home_media.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_media.html.twig
@@ -4,36 +4,68 @@
 GoHome - Media
 {% endblock %}
 
-{% block content %}
-
-        <a style="margin-top: 0.8vh" class="btn btn-alone" href="{{ path('Information') }}">Click here!</a>
-
-        <div class="row">
-            <h1 class="text-center alheader">
-                    Media
-            </h1>
-        </div>
-
-        {% set i = media|length - 1 %}
-
-        {% for m in media %}
-            <a
-                href="{{ asset( 'uploads/media/' ~ media[i].file ) }}"
-                target="_blank" >
-                <img hspace="20px" vspace="20px"
-                class="img-rounded" width="300" height="300" src="{{ asset( 'uploads/media/' ~ media[i].file ) }}" alt="{{ media[i].name }}">
-            </a>
-            {% set i = i - 1 %}
-        {% endfor %}
-
+{% block header %}
+    Gallery
 {% endblock %}
 
-{% block javascript %}
+{% block smallHeader %}
+    <br>
+    Pictures from the game
+{% endblock %}
 
-    <script>
+{% block sitebar %}
+<div class="infotext">
+    Please keep in mind that GoHome is constantly evolving and the images shown here do not represent the final game!
+</div>
+{% endblock %}
+
+{% block content %}
+
+    <div id="slider" class="carousel slide image-box" data-ride="carousel">
+        <!-- Indicators -->
+        {% set s = media|length - 1 %}
+
+    <ol class="carousel-indicators">
+        {% for m in media %}
 
 
+        {% if s == 0 %}
+            <li data-target="#slider" data-slide-to="0" class="active"></li>
+        {% else %}
+            <li data-target="#slider" data-slide-to="1"></li>
+        {% endif %}
+            {% set s = s - 1 %}
+        {% endfor %}
+        </ol>
 
-    </script>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+
+            {% set i = media|length - 1 %}
+
+            {% for m in media %}
+                    {% if i == 0 %}
+                        <div class="item active">
+                    {% else %}
+                        <div class="item">
+                    {% endif %}
+                    <img src="{{ asset( 'uploads/media/' ~ media[i].file ) }}", alt="{{ media[i].name }}">
+                </div>
+
+                {% set i = i - 1 %}
+            {% endfor %}
+
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#slider" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#slider" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
 {% endblock %}
