--- a/src/AloneBundle/Resources/views/GoHome/go_home_media.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_media.html.twig
@@ -21,7 +21,7 @@ GoHome - Media
 
 {% block content %}
 
-    <div id="slider" class="carousel slide image-box" data-ride="carousel">
+    <div id="slider" class="carousel slide image-box" data-ride="carousel" style="width: 98%">
         <!-- Indicators -->
         {% set s = media|length - 1 %}
 
