--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -61,6 +61,9 @@
 
 </script>
 
+<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+
 <div id="content" class="row">
     {% block content %}
     {% endblock %}
