--- a/src/AloneBundle/Resources/views/Downloads/downloads.html.twig
+++ b/src/AloneBundle/Resources/views/Downloads/downloads.html.twig
@@ -18,8 +18,7 @@ Downloads
 
         <div class="text-box" style="left: 5%">
             <ul class="altext">
-                <li>
-                </li>
+                Comming soon!
             </ul>
         </div>
     </div>
