--- a/src/AloneBundle/Resources/views/GoHome/go_home_concept.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_concept.html.twig
@@ -17,7 +17,13 @@
 {% block content %}
     <div class="text-box altext text-center" style="left: 5%">
         <div>
-            GoHome is great!
+            In short, GoHome is an open world horror game. The player has to go home from work, but he will soon realize that something is wrong with him, and his surroundings. To find out what's after him, he has to face his greatest fears.
+            <br>
+            <br>
+            The map of GoHome is divided into 5 sections. These are visually different from each other. In order to find out what hunts the player, you have to find the respective "special places" in the areas.
+            <br>
+            <br>
+            In these "special places" the player finds the information he needs to solve the mystery around him.
         </div>
     </div>
 {% endblock %}
