--- a/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
+++ b/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
@@ -14,7 +14,7 @@
 
 {% block content %}
 
-    <div class="altext" style="padding: 5%">
+    <div class="altext">
         <div class="text-box">
             <h1><b style="font-size: 150%">Who we are</b></h1>
             We are a small german indie game developer group called "AloneDevs" (or AloneDevelopers if you want)
