--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -22,15 +22,15 @@ Home
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="https://alonedevelopers.com/uploads/media/9daefa2b9084a2ff8bd6d0ab051bde27.png">
+                    <img src="https://alonedevelopers.com/uploads/media/8dd9578b31ce21eb7c658aa737c8bbe5.jpeg">
                 </div>
 
                 <div class="item">
-                    <img src="https://alonedevelopers.com/uploads/media/708c0654ac7e3a524ff4b15a760687dc.png">
+                    <img src="https://alonedevelopers.com/uploads/media/173cf699b97ef88b959017afbb561bf1.jpeg">
                 </div>
 
                 <div class="item">
-                    <img src="https://alonedevelopers.com/uploads/media/29d6c087d1191417f7818d5d64075a68.png">
+                    <img src="https://alonedevelopers.com/uploads/media/83ee995c84206954a8029c3cfc5bced3.jpeg">
                 </div>
             </div>
 
