--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -12,13 +12,15 @@
 
 .altext{
     font-family: 'Indie Flower';
-    font-size: 2vmax;
+    font-size: 2.2em;
     color: #141414;
 }
 
 .infotext{
     font-family: 'Indie Flower';
-    font-size: 2vmax;
+    font-size: 2em;
+    padding-top: 3em;
+    padding-left: 0.5em;
     color: #b14500;
 }
 
@@ -112,12 +114,11 @@
     border: 2px solid #040404;
     box-shadow: #000000 0px 0px 2vmax;
     color: #779a9b;
-    font-size: 2.1vmax;
+    font-size: 4em;
     padding-left: 1.6vmax;
     padding-right: 1.6vmax;
     padding-top: 1vmax;
     padding-bottom: 1vmax;
-    text-decoration: none;
     text-shadow: #000000 5px 5px 10px;
 }
 .btn-innerMenu:hover {
@@ -126,15 +127,15 @@
     border: 2px solid #000000;
     box-shadow: #000000 0px 0px 2vmax;
     color: #760c11;
-    font-size: 2.1vmax;
+    font-size: 4em;
     padding-left: 1.6vmax;
     padding-right: 1.6vmax;
     padding-top: 1vmax;
     padding-bottom: 1vmax;
-    text-decoration: none;
     text-shadow: #000000 5px 5px 10px;
-    transition: all 0.2s ease;
+    transition: all 0.15s ease;
 }
+
 .btn-GoHome:active {
     position:relative;
     top:1px;
@@ -143,10 +144,7 @@
 #Toolbar {
     position: fixed;
     width: 100%;
-    height: 15%;
-    top: 0;
-    left: 0;
-    padding: 5px;
+    height: 5.5em;
     box-shadow: 0px 4px 5px 0px #000000;
     /*background-image: url("/../images/GHStars_preview.jpeg");*/
     background: linear-gradient(rgba(0, 10, 38, 1), rgba(3, 16, 35, 1));
@@ -156,11 +154,10 @@
 
 #sitebar {
     position: fixed;
-    width: 20%;
+    width: 20em;
     height: 100%;
-    top: 15%;
+    top: 0;
     float: left;
-    padding: 5px;
     -webkit-box-shadow: 10px 0 5px 0px #000000;
     box-shadow: 10px 0 5px 0px #000000;
     background: linear-gradient(rgb(3, 16, 38), rgb(0, 0, 0));
@@ -217,9 +214,8 @@
     font-weight:600;
     text-shadow: 0px 0px 0.2vmax rgb(0, 0, 0);
     color: rgb(27, 38, 54);
-    padding-left: 23%;
-    padding-top: 8%;
-    padding-right: 5%;
+    padding-left: 2.5em;
+    padding-top: 1em;
 }
 
 .alSmallHeader{
@@ -239,9 +235,9 @@
     text-shadow: 0px 0px 0.2vmax rgb(0, 0, 0);
     color: rgb(27, 38, 54);
     text-align: right;
-    padding: 3%;
+    padding-left: 2.5em;
+    padding-top: 1em;
     float: right;
-    padding-right: 5%;
 }
 
 #content{
@@ -282,18 +278,31 @@
 
 
 /*Medium devices*/
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1030px){
     .alheader {
         font-size: 700%;
-        padding-top: 14%;
-        padding-left: 25%;
-        padding-right: 5%;
+        padding-left: 2em;
+        padding-top: 1em;
+    }
+
+    .altext{
+        font-family: 'Indie Flower';
+        font-size: 1.5em;
+        color: #141414;
     }
 
     .toolbar-links {
         font-family: 'Indie Flower';
-        font-size: 230%;
+        font-size: 200%;
         color: #7aa4a7;
+    }
+
+    .infotext{
+        font-family: 'Indie Flower';
+        font-size: 1.2em;
+        padding-top: 4.5em;
+        padding-left: 0.5em;
+        color: #b14500;
     }
 
     .alSmallHeader{
@@ -302,7 +311,8 @@
         font-weight:600;
         text-shadow: 0px 0px 0.2vmax rgb(0, 0, 0);
         color: rgb(27, 38, 54);
-        padding-left: 33%;
+        padding-left: 13em;
+        padding-right: 2em;
         margin-top: -2.5%;
     }
 
@@ -322,21 +332,84 @@
         box-shadow: #000000 0 0 0.6vmax;
         background: linear-gradient(rgba(99, 99, 99, 0.9), rgba(62, 62, 62, 0.8));
     }
+
+    #sitebar {
+        position: fixed;
+        width: 10em;
+        height: 100%;
+        top: 0;
+        float: left;
+        -webkit-box-shadow: 10px 0 5px 0px #000000;
+        box-shadow: 10px 0 5px 0px #000000;
+        background: linear-gradient(rgb(3, 16, 38), rgb(0, 0, 0));
+        z-index: 9999;
+    }
+
+    .btn-innerMenu {
+        background-color: #090d1a;
+        border-radius: 5px;
+        border: 2px solid #040404;
+        box-shadow: #000000 0px 0px 2vmax;
+        color: #779a9b;
+        font-size: 3em;
+        padding-left: 1.6vmax;
+        padding-right: 1.6vmax;
+        padding-top: 1vmax;
+        padding-bottom: 1vmax;
+        text-shadow: #000000 5px 5px 10px;
+    }
+    .btn-innerMenu:hover {
+        background-color: #050b1c;
+        border-radius: 5px;
+        border: 2px solid #000000;
+        box-shadow: #000000 0px 0px 2vmax;
+        color: #760c11;
+        font-size: 3em;
+        padding-left: 1.6vmax;
+        padding-right: 1.6vmax;
+        padding-top: 1vmax;
+        padding-bottom: 1vmax;
+        text-shadow: #000000 5px 5px 10px;
+        transition: all 0.15s ease;
+    }
+
+    .backgroundImage {
+        background: url("/../images/BackgroundSmall.jpg");
+        background-size: 50%;
+    }
+
 }
 
 /*Small devices*/
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 650px){
     .alheader {
         font-size: 500%;
-        padding-top: 20%;
-        padding-left: 25%;
-        padding-right: 5%;
+        padding-left: 0.6em;
+        padding-top: 1em;
     }
 
     .toolbar-links {
         font-family: 'Indie Flower';
         font-size: 200%;
         color: #7aa4a7;
+    }
+
+    .altext{
+        font-family: 'Indie Flower';
+        font-size: 1.5em;
+        color: #141414;
+    }
+
+    #sitebar {
+        position: fixed;
+        width: 0%;
+        height: 0%;
+        top: 0%;
+        left: 0;
+        padding: 0px;
+        background: linear-gradient(#0a1839, #000a26);
+        text-align: center;
+        z-index: 9999;
     }
 
     .alSmallHeader{
@@ -352,11 +425,9 @@
     .text-box{
         position: relative;
         width: 80%;
-        height: inherit;
-        padding: 0.5%;
-        margin: 0.5%;
-        margin-left: 5%;
         float: left;
+        left: 0%;
+        height: inherit;
         overflow: auto;
         border-style: solid;
         border-width: 4px;
@@ -365,21 +436,38 @@
         box-shadow: #000000 0 0 0.6vmax;
         background: linear-gradient(rgba(99, 99, 99, 0.9), rgba(62, 62, 62, 0.8));
     }
+
+    .infotext{
+        font-family: 'Indie Flower';
+        font-size: 0%;
+        color: #141414;
+    }
+
+    .backgroundImage {
+        background: url("/../images/BackgroundSmall.jpg");
+        background-size: 50%;
+    }
 }
 
 /*Tiny devices*/
 @media only screen and (max-width: 430px){
     .alheader {
         font-size: 400%;
-        padding-top: 30%;
-        padding-left: 5%;
-        padding-right: 5%;
+        padding-left: 0.5em;
+        padding-top: 1.5em;
     }
 
     .toolbar-links {
         font-family: 'Indie Flower';
-        font-size: 140%;
+        font-size: 135%;
         color: #7aa4a7;
+        padding: 3%;
+    }
+
+    .altext{
+        font-family: 'Indie Flower';
+        font-size: 1.5em;
+        color: #141414;
     }
 
     .alSmallHeader{
@@ -394,11 +482,11 @@
 
     #sitebar {
         position: fixed;
-        width: 0%;
-        height: 0%;
-        top: 0%;
+        width: 0;
+        height: 0;
+        top: 0;
         left: 0;
-        padding: 0px;
+        padding: 0;
         background: linear-gradient(#0a1839, #000a26);
         text-align: center;
         z-index: 9999;
@@ -416,10 +504,8 @@
 
     .text-box{
         position: relative;
-        width: 80%;
+        width: inherit;
         height: inherit;
-        padding: 0.5%;
-        margin: 0.5%;
         float: left;
         overflow: auto;
         border-style: solid;
@@ -428,6 +514,35 @@
         border-radius: 8px;
         box-shadow: #000000 0 0 0.6vmax;
         background: linear-gradient(rgba(99, 99, 99, 0.9), rgba(62, 62, 62, 0.8));
+    }
+
+    .btn-innerMenu {
+        background-color: #090d1a;
+        border-radius: 5px;
+        border: 2px solid #040404;
+        box-shadow: #000000 0px 0px 2vmax;
+        color: #779a9b;
+        float: left;
+        padding: 0.5em;
+        font-size: 2.5em;
+        text-shadow: #000000 5px 5px 10px;
+    }
+    .btn-innerMenu:hover {
+        background-color: #050b1c;
+        border-radius: 5px;
+        border: 2px solid #000000;
+        box-shadow: #000000 0px 0px 2vmax;
+        color: #760c11;
+        float: left;
+        padding: 0.5em;
+        font-size: 2.5em;
+        text-shadow: #000000 5px 5px 10px;
+        transition: all 0.15s ease;
+    }
+
+    .backgroundImage {
+        background: url("/../images/BackgroundSmall.jpg");
+        background-size: 50%;
     }
 
 }
