--- a/src/AloneBundle/Resources/views/Contact/contact.html.twig
+++ b/src/AloneBundle/Resources/views/Contact/contact.html.twig
@@ -15,14 +15,12 @@ Contact
 {% block content %}
 
 
-        <div class="text-center altext text-box" style="left: 5%">
-                Want to Contact us? Dont be shy!
-                <p></p>
-                Give us Feedback, ask Details about GoHome
-                <br>
-                or just write us what you have done today :)
+<div class="text-center altext text-box">
+    Want to Contact us? Dont be shy!<br>
+    Give us Feedback, ask Details about GoHome<br>
+    or just write us what you have done today :)
 
-    <div class="text-center" style="padding-top: 2%">
+    <div class="text-center" style="font-size: 0.5em">
         <a class="btn btn-innerMenu" target="_blank" href="https://www.youtube.com/channel/UCwFT6RfDcC21jE-QhYxCt5g" style="margin: 1%">Find us on YouTube!</a>
         <a class="btn btn-innerMenu" target="_blank" href="https://twitter.com/AloneDevelopers" style="margin: 1%">Find us on Twitter!</a>
         <a class="btn btn-innerMenu" href="mailto:AloneDevs@gmx.de" style="margin: 1%">Send us an Email!</a>
