--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -508,6 +508,7 @@
         height: inherit;
         float: left;
         overflow: auto;
+        margin-right: 2em;
         border-style: solid;
         border-width: 4px;
         border-color: rgb(44, 44, 44);
