--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -16,7 +16,7 @@
 
 </head>
 
-<body {% block background %}class="backgroundImage"{% endblock %} style="overflow-x: hidden;">
+<body {% block background %}class="backgroundImage"{% endblock %} style="background-attachment: fixed; overflow-x: hidden;">
 
 <div id="Toolbar">
     {% block toolbar %}
